force-app/main/default/objects/SEG_GrupoTrabajoRelacionado__c/SEG_GrupoTrabajoRelacionado__c.object-meta.xml
<CustomObject>
    <label>Grupo Trabajo Relacionado</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Grupo Trabajo Relacionado ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grupo Trabajo Relacionado</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>