force-app/main/default/objects/SEG_GrupoTrabajoRelacionado__c/fields/SEG_GrupoTrabajo__c.field-meta.xml
<CustomField>
    <fullName>SEG_GrupoTrabajo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo Trabajo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Grupo colaborador, Grupo Operativo Segmentos</value>
        </filterItems>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.SEG_GrupoSegmentos__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_Grupo_Colaborador__c</referenceTo>
    <relationshipLabel>Grupo Trabajo Relacionado</relationshipLabel>
    <relationshipName>Grupo_Trabajo_Relacionado</relationshipName>
    <type>Lookup</type>
</CustomField>