force-app/main/default/objects/SEG_GrupoTrabajoRelacionado__c/fields/SEG_GrupoTrabajoCSO__c.field-meta.xml
<CustomField>
    <fullName>SEG_GrupoTrabajoCSO__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <label>GrupoTrabajo CSO</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>